--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.15",
         "vite": "^5.4.11"
+    },
+    "dependencies": {
+        "@tailwindcss/line-clamp": "^0.4.4"
     }
 }
